--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Java Libraries/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Java Libraries/commons-io/commons-io-2.4.jar" sourcepath="C:/Java Libraries/commons-io/commons-io-2.4-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Java%20Libraries/commons-io/commons-io-2.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Java Libraries/jdom/jdom-2.0.6.jar" sourcepath="C:/Java Libraries/jdom/jdom-2.0.6-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Java%20Libraries/jdom/jdom-2.0.6-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
