Workspace cleaned updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,29 @@
+# Java/Eclipse files to ignore
 *.class
-*.txt
-*.btd
+.settings/
+.bin/
+
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
 
 # Package Files #
 *.war
 *.ear
 
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# Specific project files to be ignored
+*.txt
+*.btd
+*.log
+src/tests/
+/Data/
+/Data/*.*
+SAT.jar
+SAT_Updater.jar
 /bin/
